--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 			<div class="main">
-				<h1>吐丝Man Coming Soon Widget</h1>
+				<h1>Tusiman Coming Soon Widget</h1>
 					<div class="banner-right">
 						<div class="banner-right-info">
 							<p>Our website is under construction. We`ll be here soon with our new awesome site, subscribe to be notified.</p>
